tests/fail/string-index-assign-type.virtue
a = "Hello"
a[2] = "cursed"

# ignore
